@@ -2,6 +2,7 @@ This file documents the revision history for Foorum.
 
 0.08 unknown
     - I18N encoding fix
+    - use the lastest Catalyst::Plugin::Authentication (Store::Sub)
 
 0.07  Fri Oct 5 18:33:21 2007
     - use TheSchwartz to queue cron scirpt.
